--- a/templates/report_game.html
+++ b/templates/report_game.html
@@ -101,8 +101,10 @@
       </div>
     </div>
     
-    <button type="submit" class="btn btn-primary">Submit Result</button>
-    <a href="{{ url_for('index') }}" class="btn btn-secondary">Cancel</a>
+    <div class="form-actions">
+      <button type="submit" class="btn btn-primary">Submit Result</button>
+      <a href="{{ url_for('index') }}" class="btn btn-secondary">Cancel</a>
+    </div>
   </form>
 </div>
 
