--- a/templates/report_game.html
+++ b/templates/report_game.html
@@ -186,7 +186,8 @@ document.addEventListener('DOMContentLoaded', () => {
             
             resultsDiv.innerHTML = users.map(user => `
               <div class="search-result-item" data-netid="${user.netid}" data-name="${user.name}" data-elo="${user.elo}">
-                <strong>${user.name}</strong> <span class="elo-badge">${user.elo}</span>
+                <span class="player-name">${user.name}</span>
+                <span class="elo-badge">${user.elo}</span>
               </div>
             `).join('');
             resultsDiv.style.display = 'block';
