--- a/templates/report_game.html
+++ b/templates/report_game.html
@@ -26,7 +26,7 @@
       <div class="form-group">
         <label for="opponent_search">Search for Opponent</label>
         <div class="search-input-wrapper">
-          <input type="search" id="opponent_search" placeholder="Type NetID or name..." autocomplete="off" inputmode="search" required>
+          <input type="search" id="opponent_search" placeholder="Type NetID or name..." autocomplete="off" inputmode="search">
           <span class="search-loading" style="display: none;">🔍</span>
         </div>
         <div id="search_results" class="search-results"></div>
